@@ -62,6 +62,10 @@ body {
 	margin: 0;
 	padding: 0;
 }
+	/* Hide empty portlets */
+	div.emptyPortlet {
+		display: none;
+	}
 	/* Personal */
 	#p-personal {
 		position: absolute;
@@ -204,8 +208,13 @@ body {
 		direction: rtl;
 	}
 	/* @noflip */
-	div.vectorMenu h5 {
+	#head div.vectorMenu h5 {
 		float: left;
+		background-image: url(images/tab-break.png);
+		background-position: bottom left;
+		background-repeat: no-repeat;
+		padding-left: 1px;
+		margin-left: -1px;
 	}
 	/* OVERRIDDEN BY COMPLIANT BROWSERS */
 	div.vectorMenu h5 a {
